Enable java preview